# LearnOpenGL-OpenCV

./: .gitignore  readme.org  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ben/android/learnopengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: lbpcascade_frontalface.xml
app/src/main/java/com/ben/android/learnopengl/: MainActivity.java
app/src/main/java/com/ben/android/learnopengl/face/: Face.java  FaceTracking.java
app/src/main/java/com/ben/android/learnopengl/filter/: BeautyFilter.java  BigEyesFilter.java  CameraFilter.java  Filter.java  FrameBufferFilter.java  LandmarkerFilter.java  ScreenFilter.java  StickerEarFilter.java
app/src/main/java/com/ben/android/learnopengl/record/: EGLHelper.java  MediaRecord.java
app/src/main/java/com/ben/android/learnopengl/util/: AndroidUtilities.java  CameraHelper.java
app/src/main/java/com/ben/android/learnopengl/widgets/: CameraRender.java  CameraView.java  RecordButton.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: beauty_fragment.glsl  beauty_fragment2.glsl  beauty_vertex.glsl  bigeye_fragment.glsl  camera_fragment.glsl  camera_vertex.glsl  landmarker_vertex.glsl  screen_fragment.glsl  screen_vertex.glsl
app/src/test/java/com/ben/android/learnopengl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt  facetrack.cpp  facetrack.hpp  landmarker_example.h  native-lib.cpp
